--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -31,7 +31,7 @@ body {
 }
 
 #toolbar button {
-  background-color: #cb5cff;
+  background-color: #626262;
   border: none;
   border-radius: 4px;
   color:white;
@@ -41,7 +41,6 @@ body {
   
 canvas {
   background: white;
-  /* margin: auto; */
 }
 
 #stroke {
@@ -59,9 +58,3 @@ canvas {
 #clientSize {
   margin-left: 0.3rem;
 }
-
-/* input[type="range"] {
-  -webkit-appearance: none;
-  background: aqua;
-  cursor: pointer;
-} */
