--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -14,45 +14,111 @@ body {
 }
 
 .container {
-  height: 100%;
+  height: 100vh;
   display: flex;
+}
+
+.clientSizeContainer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1.5rem;
+  opacity: 50%;
 }
 
 #toolbar {
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  width: 140px;
+  width: 400px;
   background-color: #202020;
 }
 
-#toolbar label {
-  font-size: 1rem;
+#drawingTools {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-#toolbar button {
-  background-color: #626262;
+#buttonContainer {
+  display: flex;
+  justify-content: space-around;
+  margin: 1rem 0 2rem 0;
+}
+
+.fa-brush {
+  font-size: 1.5rem;
+  margin-right: 0.8rem;
+}
+
+.btn {
+  background-color: #ac75dc;
   border: none;
-  border-radius: 4px;
-  color:white;
-  padding: 2px;
+  font-size: 1rem;
+  font-weight: 600;
+  border-radius: 1rem;
+  color:#202020;
+  padding: 0.5rem;
   cursor: pointer;
+  width: 40%;
+  justify-content: center;
 }
   
 canvas {
   background: white;
 }
 
+#chat {
+  background: #202020;
+}
+
+#chat h1 {
+  text-align: center;
+  margin-bottom: 0.6rem;
+}
+
+.chatMessage {
+  background: #4b4b4b;
+  padding: 0.6rem 1.2rem;
+  border-radius: 2rem;
+  margin: 1rem;
+  max-width: max-content;
+  overflow-wrap: break-word;
+}
+
+#chatButton {
+  background: #ac75dc;
+  border: none;
+  height: 2.4rem;
+  width: 3rem;
+  border-radius: 0 2rem 2rem 0;
+  color:white;
+  padding: 0.5rem;
+  cursor: pointer;
+  position: relative;
+  top: -2px;
+}
+
+.fa-paper-plane {
+  color: #202020;
+}
+
+#messageBox {
+  width: 86%;
+  font-size: 1.2rem;
+  border-radius: 2rem 0 0 2rem;
+  height: 2.4rem;
+  outline: none;
+  border: none;
+  padding: 0.7rem;
+
+}
+
 #stroke {
-  width: 4rem;
+  width: 118px;
   height: 4rem;
   background-color: transparent;
   border: none;
   cursor: pointer;
-}
-
-.clientSizeContainer {
-  display: flex;
 }
 
 #clientSize {
@@ -61,13 +127,5 @@ canvas {
 
 #lineWidth {
   cursor: pointer;
-}
-
-.fa-square, .fa-circle {
-  font-size: 1.2rem;
-  margin-right: 0.5rem;
-}
-
-#fillColour {
-  margin-right: 0.5rem;
+  width: 80%;
 }
